--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -3,6 +3,8 @@
 
 name: Maven Package
 
+env:
+  DOCKER_HUB_REPO: oreoluwa01/docka
 on:
   push:
     branches: ['main']
@@ -27,3 +29,18 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+
+    - name: Set up Docker Buildx
+      run: |
+        docker buildx create --name multiarch-builder --use
+        docker buildx inspect --bootstrap
+
+    - name: Build and push Docker image to Docker Hub
+      run: |
+        docker buildx build --platform linux/amd64, linux/arm64 \
+          -t ${{ env.DOCKER_HUB_REPO }}:latest \
+          -t ${{ env.DOCKER_HUB_REPO }}:$GITHUB_SHA \
+          --push .
