--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,7 +24,7 @@ jobs:
           image: postgres:13
           env:
             POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: @Lizabeth01
+            POSTGRES_PASSWORD: "@Lizabeth01"
             POSTGRES_DB: postgres
           options: >- 
             --health-cmd "pg_isready -U postgres"
