Updated the maven-publish.yml

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,36 +18,35 @@ jobs:
       contents: read
       packages: write
 
-  
     services:
-        postgres:
-          image: postgres:13
-          env:
-            POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: "@Lizabeth01"
-            POSTGRES_DB: postgres
-          options: >- 
-            --health-cmd "pg_isready -U postgres"
-            --health-interval 10s
-            --health-timeout 5s
-            --health-retries 5
-          ports:
-            - 5432:5432
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: "@Lizabeth01"
+          POSTGRES_DB: postgres
+        options: >-
+          --health-cmd "pg_isready -U postgres"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
 
     steps:
     - uses: actions/checkout@v4
       with:
-         fetch-depth: 0
+        fetch-depth: 0
 
     - name: Wait for postgres to be ready
       run: |
         for i in {1..30}; do
-            if pg_isready -h localhost -p 5432 -U postgres; then
-              echo "Postgres is ready"
-              break
-            fi
-            echo "Waiting for postgres..."
-            sleep 1
+          if pg_isready -h localhost -p 5432 -U postgres; then
+            echo "Postgres is ready"
+            break
+          fi
+          echo "Waiting for postgres..."
+          sleep 1
         done
         
     - name: Set up JDK 17
@@ -58,14 +57,13 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-        
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
     # - name: build docker image
-    #   run : docker build -t docker-practice-d .
+    #   run: docker build -t docker-practice-d .
 
-    - name: log in to Docker hub
+    - name: Log in to Docker hub
       run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
     - name: Set up Docker Buildx
@@ -78,4 +76,4 @@ jobs:
         docker buildx build --platform linux/amd64,linux/arm64 \
           -t ${{ env.DOCKER_HUB_REPO }}:latest \
           -t ${{ env.DOCKER_HUB_REPO }}:$GITHUB_SHA \
-          --push .
+          --push .
