--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ server.port=${PORT:8080}
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=postgres
 spring.datasource.password=@Lizabeth01
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://${host:localhost}:5432/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
